# ha-recorder-tuning

./: .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ha-dev-compat.yaml  hacs-validation.yaml  integration-tests.yaml  pre-commit.yaml  release.yaml  tests.yaml
custom_components/recorder_tuning/: __init__.py  config_flow.py  const.py  manifest.json  services.yaml  strings.json
tests/: test_config_flow_helpers.py  test_config_schema.py  test_entity_resolution.py  test_ha_signature_compat.py  test_manager_lifecycle.py  test_manager_rules.py  test_options_flow_strings.py  test_reload_service.py  test_stats_patch.py  test_unload_entry.py  test_yaml_loader.py
tests/integration/: conftest.py  test_dry_run.py  test_entity_purge.py  test_stats_keep_days_config.py  test_stats_retention.py  test_yaml_config.py
