[project]
name = "ha-recorder-tuning"
version = "0.1.0"
description = "Home Assistant integration that adds per-entity purge rules for recorder history and decouples short-term statistics retention from purge_keep_days."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-homeassistant-custom-component==0.13.205",
]
lint = [
  "pre-commit==4.5.1",
]

[tool.uv]
prerelease = "allow"
