[project]
name = "ha-recorder-tuning"
version = "0.1.0"
description = "Home Assistant integration that adds per-entity purge rules for recorder history and decouples short-term statistics retention from purge_keep_days."
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "pytest-homeassistant-custom-component>=0.13.323",
]
lint = [
  "pre-commit>=4.5",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
target-version = "py313"
